fix: completed list box now aligned properly

--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,13 @@ body {
 
 .App {
   display: flex;
+  transition: 0.3s ease;
 }
 
 .bucket-list-container {
   display: flex;
   width: 100vw;
+  transition: width 0.1s ease;
 }
 
 .bucket-list-wrapper {
@@ -143,9 +145,8 @@ body {
 }
 
 .completed-items-container {
-  display: flex;
-  width: 20vw;
-  text-align: center;
+  flex: 0 0 15%;
+  align-items: center;
   background: rgb(174, 174, 174);
   padding: 0.5rem 1rem;
   border-radius: 10px;
@@ -155,9 +156,8 @@ body {
 }
 
 .completed-items-title {
-  display: flex;
   text-align: center;
-  font-size: 180%;
+  font-size: 110%;
   font-variant: small-caps;
-  margin-bottom: 1.5rem;
+  margin-left: 3rem;
 }
